--- a/GGKala/Category/templates/Category/sex_toys_slug.html
+++ b/GGKala/Category/templates/Category/sex_toys_slug.html
@@ -28,7 +28,7 @@
         <div class="margin-product">
             <div class="product-holder-all">
                 <div class="filter-list">
-                    {% include 'GGkala/filter_list.html' %}
+                    {% include 'Category/filter_list.html' %}
                 </div>
                 <div class="product-season-holder">
 
