--- a/GGKala/static/GGkala/css/header.css
+++ b/GGKala/static/GGkala/css/header.css
@@ -80,8 +80,8 @@ body {
 .text-user {
     overflow: hidden;
     font-size: 14px;
-    font-family: Yekan;
-    padding: 3px 10px 0 10px;
+    font-family: Shabnam;
+    padding: 10px 5px 0 10px;
     color: #262626;
     text-decoration: none;
     background: none;
