--- a/GGKala/templates/GGkala/header.html
+++ b/GGKala/templates/GGkala/header.html
@@ -10,7 +10,15 @@
                 {% if user.is_anonymous %}
                     <a href="{% url 'login' %}" class="text-user"><span> ورود | ثبت نام</span></a>
                 {% else %}
-                    <a href="{% url 'logout' %}" class="text-user"><span> {{ user.get_full_name|truncatechars:15 }} </span></a>
+                    <a href="{% url 'logout' %}" class="text-user">
+                        <span>
+                            {% if user.get_full_name%}
+                                {{ user.get_full_name|truncatechars:15 }}
+                            {% else %}
+                                {{ user.username }}
+                            {% endif %}
+                        </span>
+                    </a>
                 {% endif %}
 
             </div>
