--- a/GGKala/static/Products/css/product_main_detail.css
+++ b/GGKala/static/Products/css/product_main_detail.css
@@ -174,10 +174,11 @@
 .selected-color {
     background: none;
     display: flex;
+    flex-direction: column;
 }
 
 .color-s {
-    padding: 15px 20px 15px 0;
+    padding: 15px 20px 10px 0;
     background: none;
     font-family: Shabnam;
 }
@@ -190,9 +191,49 @@
 }
 
 .color-circle {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
-    margin: 5px 4px;
+    /*margin: 5px 4px;*/
+}
+
+.color-detail.selected {
+    border: 2px solid #6f42c1;
+}
+
+.color-detail {
     cursor: pointer;
+    width: 25px;
+    height: 25px;
+    padding: 2px;
+    display: flex;
+    border-radius: 50%;
+    border: 2px solid #c7c7c7;
+    margin-right: 10px;
+    transition: .3s;
+}
+
+.color-detail:hover {
+    border: 2px solid #6f42c1;
+    transition: .3s;
+}
+
+.color-select {
+    background: none;
+    display: flex;
+    padding-right: 15px;
+}
+
+.color-names {
+    display: flex;
+    align-items: center;
+    background: none;
+    font-family: Shabnam;
+}
+
+.color-ss {
+    background: none;
+    padding-right: 5px;
+    font-weight: bold;
+    padding-top: 2px;
 }
