--- a/GGKala/static/Products/css/product_main_detail.css
+++ b/GGKala/static/Products/css/product_main_detail.css
@@ -165,10 +165,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100px;
-    margin-top: 30px;
-    border-radius: 12px;
-    background-color: #f1f1f1;
+    margin-top: 40px;
+    /*border-radius: 12px;*/
+    /*background-color: #f1f1f1;*/
 }
 
 .selected-color {
@@ -178,7 +177,6 @@
 }
 
 .color-s {
-    padding: 15px 20px 10px 0;
     background: none;
     font-family: Shabnam;
 }
@@ -191,8 +189,8 @@
 }
 
 .color-circle {
-    width: 25px;
-    height: 25px;
+    width: 26px;
+    height: 26px;
     border-radius: 50%;
     /*margin: 5px 4px;*/
 }
@@ -203,13 +201,13 @@
 
 .color-detail {
     cursor: pointer;
-    width: 25px;
-    height: 25px;
-    padding: 2px;
+    width: 26px;
+    height: 26px;
+    padding: 1px;
     display: flex;
     border-radius: 50%;
     border: 2px solid #c7c7c7;
-    margin-right: 10px;
+    margin-left: 12px;
     transition: .3s;
 }
 
@@ -221,7 +219,8 @@
 .color-select {
     background: none;
     display: flex;
-    padding-right: 15px;
+    padding-top: 15px;
+    flex-wrap: wrap;
 }
 
 .color-names {
